--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,6 @@
+@import 'utilities';
+@import 'btnConfig';
+@import 'config'; 
 
 * {
   box-sizing: border-box;
@@ -9,6 +12,7 @@ body {
   background-color: $light-color;
   font-family: $font-stack;
   line-height: 1;
+  color: white;
 }
 
 img {
@@ -21,13 +25,48 @@ a {
 
 .hero {
   // This is where the bulk of the SCSS styling needs to be done
-
   // Take a look at the other files we've built already. How can they be useful here?
 
   // Also, take time to review the features of SCSS we've already covered:
   // 1. $variables
   // 2. nesting (dont forget about the ampersand (&) parent selector!)
   // 3. At-Rules
+    .box {
+      @include set-bg($primary-color);
+      nav {
+        width: 100%;
+        justify-content: space-between;
+        display: flex;
+        gap: 3rem;
+        ul {
+            display: flex;
+            color: white;
+            list-style-type: none;
+            justify-content: space-between;
+            li {
+              a {
+                color: white;
+              }
+            }
+          }
+        }
+      .hero-content {
+        display: flex;
+        align-items: center;
+        div {
+          width: 50%;
+          h1 {
+
+          }
+          p {
+
+          }
+        }
+        img {
+          width: 50%;
+        }
+      }
+    }
 }
 
 // This code is related to some of the aspects of SCSS we have yet to cover.
